--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <div id="chiste-aleatorio"></div>
       <button onclick="obtenerChiste()">Otro chiste</button>
     </section>
+    <h2 style="margin-top:2rem;">⚔️ Duelo de Chistes</h2>
+    <div id="duelo-chistes">Cargando duelo...</div>
+    
 
     <!-- 2. Buscar -->
     <section id="buscar" class="tab">
